--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="./lib/fontawesome-free-5.15.1-web/css/all.css">
+  <link rel="icon" type="image/jpg" href="./assets/favicon/favicon-16x16.png"/>
   <title>Appsus</title>
 </head>
 
